# pre-commit-config-updater

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pre_commit_config_updater.py  pyproject.toml  setup.cfg
