[metadata]
name = pre_commit_config_updater
version = 0.0.1
url = https://github.com/DoodleScheduling/pre-commit-config-updater
author = Doodle Data Team
description = Updates config files during pre-commit
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = pre_commit_config_updater
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pre-commit-config-updater = pre_commit_config_updater:main

[bdist_wheel]
universal = True
